# DSA-LABS

./: .gitignore  README.md
2.1/: CMakeLists.txt  main.c
LAB1.1/: CMakeLists.txt
first_semester/lab1.1/documents/: way2.drawio
first_semester/lab1.2/wayWithDynamicProgramming/: main.c
first_semester/lab1.2/wayWithNestedCycles/: main.c
first_semester/lab1.5/documents/: DSAlab1.5.docx
first_semester/lab1.5/linearSearch/: CMakeLists.txt  main.c
first_semester/lab1.6/: CMakeLists.txt  main.c
first_semester/lab1.6/documents/: Lab1.6DSAvar15.docx
first_semester/lab2.1/: main.c
first_semester/lab2.2/: CMakeLists.txt
first_semester/lab2.2/documents/: Lab2.2DSA.docx
lab1.1/LAB1.1way1/: CMakeLists.txt  main.c
lab1.1/LAB1.1way2/: CMakeLists.txt  main.c
lab1.1/documents/: way1.drawio
lab1.2/documents/: DSAlab1.2.docx
lab1.2/wayWithDynamicProgramming/: main.c
lab1.2/wayWithNestedCycles/: CMakeLists.txt  main.c
lab1.5/documents/: DSAlab1.5.docx
lab1.5/linearSearch/: main.c
lab1.6/: main.c
lab2.1/: main.c
lab2.1/documents/: Lab2.1DSA.docx
lab2.2/: main.c
second_semester/Lab_1/documents/: Lab1DSA.docx
second_semester/Lab_1/loop/: loop.c
second_semester/Lab_1/onBack/: back.c
second_semester/Lab_1/onDivein/: divein.c
second_semester/Lab_2/: CMakeLists.txt  main.c
second_semester/Lab_3/: CMakeLists.txt
second_semester/Lab_4/: CMakeLists.txt  app.c  print.c
second_semester/Lab_4/documents/code/: app.c
second_semester/Lab_4/header/: matrix.h
second_semester/Lab_4/lib/: characteristic.c  coord.c  display.c  matrix.c
(+12 files in other folders)
